--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -44,7 +44,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="https://www.waters.com/">
+                    <a href="http://macrogen.com/en/">
                         <img src="/img/logos/macrogen_oceania.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
