--- a/_includes/register.html
+++ b/_includes/register.html
@@ -19,19 +19,19 @@
                     <tbody>
                       <tr>
                         <td><b>Early bird + free dinner</b></td>
-                        <td>$85 (First 25 people by Friday 24 August)</td>
+                        <td>$85 (First 25 people by Friday 24<sup>th</sup> August)</td>
                       </tr>
                       <tr>
                         <td><b>Early bird</b></td>
-                        <td>$85 (by Friday 24 August)</td>
+                        <td>$85 (by Friday 24<sup>th</sup> August)</td>
                       </tr>
                       <tr>
                         <td><b>Regular registration</b></td>
-                        <td>$100 (by Friday 2 November)</td>
+                        <td>$100 (by Friday 2<sup>nd</sup> November)</td>
                       </tr>
                       <tr>
                         <td><b>Dinner</b></td>
-                        <td>$25 (by Friday 2 November)</td>
+                        <td>$25 (by Friday 2<sup>nd</sup> November)</td>
                       </tr>
                     </tbody>
                   </table>
