--- a/_includes/abstracts.html
+++ b/_includes/abstracts.html
@@ -9,7 +9,7 @@
 
              <div class="register">
 
-                To submit an abstract for a poster or oral presentation, download the Abstract Template from the Monash.Shop registration site when you register. 
+                To submit an abstract for a poster or oral presentation, download the Abstract Template from the <a href="https://shop.monash.edu/embl-australia-phd-symposium-registration.html">Monash.Shop registration site</a> when you register. 
                 <h3 class="text-align-left service-heading">Poster presentations</h3>
                 <ul>
                   <li>All posters must be in portrait format, A0 size</li>
