more table work

--- a/_includes/css/eaps.css
+++ b/_includes/css/eaps.css
@@ -84,6 +84,14 @@
   color: black;
 }
 
+.programme-table {
+    table-layout: fixed;
+}
+
+.programme-table td {
+    height: 20px;
+    overflow: hidden;
+}
 
 #abstracts {
   padding-top: 0px;
