--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -11,32 +11,31 @@
             <div class="prog_table">
            <h3 class="text-align-left service-heading">Programme</h3>
 
-            <table class="datestable text-align-left table table-striped">
-            <thead><tr class="tableizer-firstrow"><th></th><th>Day 1</th><th>Day 2</th><th>Day 3</th></tr></thead><tbody>
-             <tr><td>&nbsp;</td><td>Wednesday 28th </td><td>Thursday 29th </td><td>Friday 30th </td></tr>
-             <tr><td>9:00</td><td>&nbsp;</td><td>Oncology </td><td>Ecology </td></tr>
-             <tr><td>9:30</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td>10:00</td><td>&nbsp;</td><td>Student talks (10 min)</td><td>Student talks (10 min)</td></tr>
-             <tr><td>10:30</td><td>&nbsp;</td><td>Morning tea </td><td>Morning tea </td></tr>
-             <tr><td>11:00</td><td>&nbsp;</td><td>Neurobiology</td><td>Genetics & Cell Biology </td></tr>
-             <tr><td>11:30</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td>12:00</td><td>&nbsp;</td><td>Student talks (10 min)</td><td>Student talks (10 min)</td></tr>
-             <tr><td>12:30</td><td>&nbsp;</td><td>Lightning Talks (for Poster Session A)</td><td>Lightning Talks (for Poster Session B) </td></tr>
-             <tr><td>13:00</td><td>Registration</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td>13:30</td><td>&nbsp;</td><td>Lunch & Poster Session A </td><td>Lunch & Poster Session B</td></tr>
-             <tr><td>14:00</td><td>Welcome Address</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td>14:30</td><td>Keynote Address</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td>15:00</td><td>&nbsp;</td><td>Bioinformatics</td><td>Immunology & Virology </td></tr>
-             <tr><td>15:30</td><td>Student talks (10 min) (translational) </td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td>16:00</td><td>Lightning Talks (for Poster Session A) </td><td>Student talks (10 min)</td><td>Student talks (10 min)</td></tr>
-             <tr><td>16:30</td><td>&nbsp;</td><td>Lightning Talks (for Poster Session B) </td><td>Awards & Final Remarks </td></tr>
-             <tr><td>17:00</td><td>Science & Society Panel </td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td>17:30</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td>18:00</td><td>Welcome Drinks</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td>18:30</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td>19:00</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td>19:30</td><td>&nbsp;</td><td>Symposium Dinner</td><td>&nbsp;</td></tr>
-             <tr><td>20:00</td><td>&nbsp;</td><td>&nbsp;</td><td></td></tr>
+            <table class="programe-table text-align-left table table-striped">
+            <thead><tr class="tableizer-firstrow"><th></th><th>Wednesday 28th</th><th>Thursday 29th</th><th>Friday 30th</th></tr></thead><tbody>
+             <tr><td><b>9:00</b></td><td>&nbsp;</td><td>Oncology </td><td>Ecology </td></tr>
+             <tr><td><b>9:30</b></td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+             <tr><td><b>10:00</b></td><td>&nbsp;</td><td>Student talks (10 min)</td><td>Student talks (10 min)</td></tr>
+             <tr><td><b>10:30</b></td><td>&nbsp;</td><td>Morning tea </td><td>Morning tea </td></tr>
+             <tr><td><b>11:00</b></td><td>&nbsp;</td><td>Neurobiology</td><td>Genetics & Cell Biology </td></tr>
+             <tr><td><b>11:30</b></td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+             <tr><td><b>12:00</b></td><td>&nbsp;</td><td>Student talks (10 min)</td><td>Student talks (10 min)</td></tr>
+             <tr><td><b>12:30</b></td><td>&nbsp;</td><td>Lightning Talks (for Poster Session A)</td><td>Lightning Talks (for Poster Session B) </td></tr>
+             <tr><td><b>13:00</b></td><td>Registration</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+             <tr><td><b>13:30</b></td><td>&nbsp;</td><td>Lunch & Poster Session A </td><td>Lunch & Poster Session B</td></tr>
+             <tr><td><b>14:00</b></td><td>Welcome Address</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+             <tr><td><b>14:30</b></td><td>Keynote Address</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+             <tr><td><b>15:00</b></td><td>&nbsp;</td><td>Bioinformatics</td><td>Immunology & Virology </td></tr>
+             <tr><td><b>15:30</b></td><td>Student talks (10 min) (translational) </td><td>&nbsp;</td><td>&nbsp;</td></tr>
+             <tr><td><b>16:00</b></td><td>Lightning Talks (for Poster Session A) </td><td>Student talks (10 min)</td><td>Student talks (10 min)</td></tr>
+             <tr><td><b>16:30</b></td><td>&nbsp;</td><td>Lightning Talks (for Poster Session B) </td><td>Awards & Final Remarks </td></tr>
+             <tr><td><b>17:00</b></td><td>Science & Society Panel </td><td>&nbsp;</td><td>&nbsp;</td></tr>
+             <tr><td><b>17:30</b></td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+             <tr><td><b>18:00</b></td><td>Welcome Drinks</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+             <tr><td><b>18:30</b></td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+             <tr><td><b>19:00</b></td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+             <tr><td><b>19:30</b></td><td>&nbsp;</td><td>Symposium Dinner</td><td>&nbsp;</td></tr>
+             <tr><td><b>20:00</b></td><td>&nbsp;</td><td>&nbsp;</td><td></td></tr>
             </tbody></table>
 
             <div class="row">
