--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -4,88 +4,218 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Programme</h2>
-                    <h3 class="section-subheading text-muted">The programme pdf will be available for download here.</h3>
-                </div>
-            </div>
-
-            <div class="prog_table">
-           <h3 class="text-align-left service-heading">Programme</h3>
-
-            <table class="programe-table text-align-left table table-striped">
-            <thead><tr class="tableizer-firstrow"><th></th><th>Wednesday 28th</th><th>Thursday 29th</th><th>Friday 30th</th></tr></thead><tbody>
-             <tr><td><b>9:00</b></td><td>&nbsp;</td><td>Oncology </td><td>Ecology </td></tr>
-             <tr><td><b>9:30</b></td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td><b>10:00</b></td><td>&nbsp;</td><td>Student talks (10 min)</td><td>Student talks (10 min)</td></tr>
-             <tr><td><b>10:30</b></td><td>&nbsp;</td><td>Morning tea </td><td>Morning tea </td></tr>
-             <tr><td><b>11:00</b></td><td>&nbsp;</td><td>Neurobiology</td><td>Genetics & Cell Biology </td></tr>
-             <tr><td><b>11:30</b></td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td><b>12:00</b></td><td>&nbsp;</td><td>Student talks (10 min)</td><td>Student talks (10 min)</td></tr>
-             <tr><td><b>12:30</b></td><td>&nbsp;</td><td>Lightning Talks (for Poster Session A)</td><td>Lightning Talks (for Poster Session B) </td></tr>
-             <tr><td><b>13:00</b></td><td>Registration</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td><b>13:30</b></td><td>&nbsp;</td><td>Lunch & Poster Session A </td><td>Lunch & Poster Session B</td></tr>
-             <tr><td><b>14:00</b></td><td>Welcome Address</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td><b>14:30</b></td><td>Keynote Address</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td><b>15:00</b></td><td>&nbsp;</td><td>Bioinformatics</td><td>Immunology & Virology </td></tr>
-             <tr><td><b>15:30</b></td><td>Student talks (10 min) (translational) </td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td><b>16:00</b></td><td>Lightning Talks (for Poster Session A) </td><td>Student talks (10 min)</td><td>Student talks (10 min)</td></tr>
-             <tr><td><b>16:30</b></td><td>&nbsp;</td><td>Lightning Talks (for Poster Session B) </td><td>Awards & Final Remarks </td></tr>
-             <tr><td><b>17:00</b></td><td>Science & Society Panel </td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td><b>17:30</b></td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td><b>18:00</b></td><td>Welcome Drinks</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td><b>18:30</b></td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td><b>19:00</b></td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-             <tr><td><b>19:30</b></td><td>&nbsp;</td><td>Symposium Dinner</td><td>&nbsp;</td></tr>
-             <tr><td><b>20:00</b></td><td>&nbsp;</td><td>&nbsp;</td><td></td></tr>
-            </tbody></table>
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Wednesday</h4>
-                                    <h4 class="subheading">28th of November</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">The symposium begins in Brisbane! Registration, Welcome and Keynote Addresses, as well as the Science and Society Panel.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Thursday</h4>
-                                    <h4 class="subheading">29th of November</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">The second day of EAPS18. Poster sessions and talks, concluding in the Symposium Dinner.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Friday</h4>
-                                    <h4 class="subheading">30th of November</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">The final day of the symposium. All remaining talks, posters, and invited speakers, with awards and final remarks finishing by around 5pm.</p>
-                                </div>
-                            </div>
-                        </li>
-                        
-                    </ul>
+                    <h3 class="section-subheading text-muted">See below for the provisional programme.</h3>
                 </div>
             </div>
         </div>
+
+ <div style="overflow-x:auto;">
+<table class="prog_table" style="border-collapse:
+ collapse;table-layout:fixed;width:477pt" width="636" cellspacing="0" cellpadding="0" border="0">
+ <colgroup><col style="mso-width-source:userset;mso-width-alt:1621;width:38pt" width="51">
+ <col style="mso-width-source:userset;mso-width-alt:5845;width:137pt" width="183">
+ <col style="mso-width-source:userset;mso-width-alt:6698;width:157pt" width="209">
+ <col style="mso-width-source:userset;mso-width-alt:6186;width:145pt" width="193">
+ 
+ <col span="3"></colgroup><tbody><tr style="mso-height-source:userset;height:15.75pt" height="20">
+  <td rowspan="2" class="xl82" style="height:31.5pt;width:38pt" width="51" height="40">&nbsp;</td>
+  <td class="xl83" style="border-left:none;width:137pt" width="183">Day 1</td>
+  <td class="xl83" style="border-left:none;width:157pt" width="209">Day 2</td>
+  <td class="xl83" style="border-left:none;width:145pt" width="193">Day 3</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:15.75pt" height="20">
+  <td class="xl83" style="height:15.75pt;border-top:none;
+  border-left:none;width:137pt" width="183" height="20">Wednesday 28th<span style="mso-spacerun:yes">&nbsp;</span></td>
+  <td class="xl83" style="border-top:none;border-left:none;width:157pt" width="209">Thursday
+  29th<span style="mso-spacerun:yes">&nbsp;</span></td>
+  <td class="xl83" style="border-top:none;border-left:none;width:145pt" width="193">Friday
+  30th<span style="mso-spacerun:yes">&nbsp;</span></td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl81" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">9:00</td>
+  <td class="xl85" style="border-top:none;border-left:none;width:137pt" width="183">&nbsp;</td>
+  <td rowspan="2" class="xl67" style="border-top:none;width:157pt" width="209">Dr. C
+  Glenn Begley (Oncology)</td>
+  <td rowspan="2" class="xl68" style="border-top:none;width:145pt" width="193">A/Prof.
+  Tracy Ainsworth (Ecology)</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl94" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">9:30</td>
+  <td class="xl78" style="border-left:none;width:137pt" width="183">&nbsp;</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl81" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">10:00</td>
+  <td class="xl86" style="border-left:none;width:137pt" width="183">&nbsp;</td>
+  <td class="xl69" style="border-top:none;border-left:none;width:157pt" width="209">Student
+  talks (10 min x 3) (Oncology)</td>
+  <td class="xl70" style="border-top:none;border-left:none;width:145pt" width="193">Student
+  talks (10 min x 3) (ecology)<span style="mso-spacerun:yes">&nbsp;</span></td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl94" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">10:30</td>
+  <td class="xl78" style="border-left:none;width:137pt" width="183">&nbsp;</td>
+  <td class="xl65" style="border-top:none;border-left:none;width:157pt" width="209">Morning
+  tea<span style="mso-spacerun:yes">&nbsp;</span></td>
+  <td class="xl65" style="border-top:none;border-left:none;width:145pt" width="193">Morning
+  tea<span style="mso-spacerun:yes">&nbsp;</span></td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl81" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">11:00</td>
+  <td class="xl86" style="border-left:none;width:137pt" width="183">&nbsp;</td>
+  <td rowspan="2" class="xl71" style="border-top:none;width:157pt" width="209">A/Prof.
+  Cedric Bardy (Neurobiology)</td>
+  <td rowspan="2" class="xl72" style="border-top:none;width:145pt" width="193">A/Prof.
+  Natalie Sims (Genetics &amp; Cell Biology)</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl94" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">11:30</td>
+  <td class="xl78" style="border-left:none;width:137pt" width="183">&nbsp;</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl81" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">12:00</td>
+  <td class="xl86" style="border-left:none;width:137pt" width="183">&nbsp;</td>
+  <td class="xl73" style="border-top:none;border-left:none;width:157pt" width="209">Student
+  talks (10 min x 3) (neurobiology)</td>
+  <td class="xl73" style="border-top:none;border-left:none;width:145pt" width="193">Student
+  talks (10 min x 3) (genetics &amp; cell biology)</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl94" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">12:30</td>
+  <td class="xl78" style="border-left:none;width:137pt" width="183">&nbsp;</td>
+  <td rowspan="2" class="xl74" style="border-top:none;width:157pt" width="209">Lightning
+  Talks (for Poster Session A)</td>
+  <td rowspan="2" class="xl74" style="border-top:none;width:145pt" width="193">Lightning
+  Talks (for Poster Session B)<span style="mso-spacerun:yes">&nbsp;</span></td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl81" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">13:00</td>
+  <td class="xl86" style="border-left:none;width:137pt" width="183">&nbsp;</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl94" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">13:30</td>
+  <td class="xl80" style="border-left:none;width:137pt" width="183">&nbsp;</td>
+  <td rowspan="3" class="xl65" style="border-top:none;width:157pt" width="209">Lunch
+  &amp; Poster Session A<span style="mso-spacerun:yes">&nbsp;</span></td>
+  <td rowspan="3" class="xl65" style="border-top:none;width:145pt" width="193">Lunch
+  &amp; Poster Session B</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl81" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">14:00</td>
+  <td rowspan="2" class="xl65" style="border-top:none;width:137pt" width="183">Registration</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl94" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">14:30</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl81" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">15:00</td>
+  <td class="xl65" style="border-top:none;border-left:none;width:137pt" width="183">Welcome
+  Address</td>
+  <td rowspan="2" class="xl75" style="border-top:none;width:157pt" width="209">Dr.
+  Kim-Anh Lê Cao (Bioinformatics)</td>
+  <td rowspan="2" class="xl76" style="border-top:none;width:145pt" width="193">Prof.
+  Jenny Martin (Immunology &amp; Virology)</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl94" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">15:30</td>
+  <td rowspan="2" class="xl65" style="border-top:none;width:137pt" width="183">Keynote
+  Address from Prof. Ian Frazer</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl81" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">16:00</td>
+  <td class="xl73" style="border-top:none;border-left:none;width:157pt" width="209">Student
+  talks (10 min x 3) (Bioinformatics)<span style="mso-spacerun:yes">&nbsp;</span></td>
+  <td class="xl73" style="border-top:none;border-left:none;width:145pt" width="193">Student
+  talks (10 min x 3) (immunology &amp; virology)<span style="mso-spacerun:yes">&nbsp;</span></td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl94" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">16:30</td>
+  <td class="xl73" style="border-top:none;border-left:none;width:137pt" width="183">Student
+  talks (10 min x 3) (Translational)</td>
+  <td rowspan="2" class="xl74" style="border-top:none;width:157pt" width="209">Lightning
+  Talks (for Poster Session B)<span style="mso-spacerun:yes">&nbsp;</span></td>
+  <td rowspan="2" class="xl65" style="border-top:none;width:145pt" width="193">Awards
+  &amp; Final Remarks<span style="mso-spacerun:yes">&nbsp;</span></td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl81" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">17:00</td>
+  <td rowspan="2" class="xl74" style="border-top:none;width:137pt" width="183">Lightning
+  Talks (for Poster Session A)<span style="mso-spacerun:yes">&nbsp;</span></td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl94" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">17:30</td>
+  <td class="xl77" style="width:157pt" width="209">&nbsp;</td>
+  <td class="xl95" style="width:145pt" width="193">&nbsp;</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl81" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">18:00</td>
+  <td rowspan="2" class="xl88" style="border-top:none;width:137pt" width="183">Science
+  &amp; Society Panel<span style="mso-spacerun:yes">&nbsp;</span></td>
+  <td class="xl91">&nbsp;</td>
+  <td class="xl92">&nbsp;</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl94" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">18:30</td>
+  <td class="xl79">&nbsp;</td>
+  <td class="xl96">&nbsp;</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl81" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">19:00</td>
+  <td rowspan="5" class="xl88" style="border-right:.5pt solid gray;
+  border-top:none;width:137pt" width="183">Welcome Drinks</td>
+  <td class="xl93" style="border-left:none">&nbsp;</td>
+  <td class="xl92">&nbsp;</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl94" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">19:30</td>
+  <td rowspan="4" class="xl90" style="width:157pt" width="209">Symposium Dinner</td>
+  <td class="xl79">&nbsp;</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl81" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">20:00</td>
+  <td class="xl91">&nbsp;</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl94" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">20:30</td>
+  <td class="xl79">&nbsp;</td>
+ </tr>
+ <tr style="mso-height-source:userset;height:28.0pt" height="37">
+  <td class="xl81" style="height:28.0pt;border-top:none;
+  width:38pt" width="51" height="37">21:00</td>
+  <td class="xl93">&nbsp;</td>
+ </tr>
+ <!--[if supportMisalignedColumns]-->
+ <tr style="display:none" height="0">
+  <td style="width:38pt" width="51"></td>
+  <td style="width:137pt" width="183"></td>
+  <td style="width:157pt" width="209"></td>
+  <td style="width:145pt" width="193"></td>
+ </tr>
+ <!--[endif]-->
+</tbody></table>
+</div>
+            
     </section>
