--- a/_includes/css/eaps.css
+++ b/_includes/css/eaps.css
@@ -72,27 +72,6 @@
   color: black;
 }
 
-.prog_table {
-  max-width: 1200px;
-  padding: 10px;
-  color: #595959;
-  margin-left: auto;
-  margin-right: auto;
-  }
-
-.prog_table h3 {
-  color: black;
-}
-
-.programme-table {
-    table-layout: fixed;
-}
-
-.programme-table td {
-    height: 20px;
-    overflow: hidden;
-}
-
 #abstracts {
   padding-top: 0px;
 }
@@ -146,3 +125,432 @@ a.twitter {
 a.facebook {
   background-image: url("/img/social/facebook.png");
 }
+
+.prog_table {
+  margin-left: auto;
+  margin-right: auto;
+          display: block;
+        overflow-x: auto;
+        white-space: nowrap;
+}
+
+<!--table
+  {mso-displayed-decimal-separator:"\.";
+  mso-displayed-thousand-separator:"\,";}
+@page
+  {margin:.75in .7in .75in .7in;
+  mso-header-margin:.3in;
+  mso-footer-margin:.3in;}
+tr
+  {mso-height-source:auto;}
+col
+  {mso-width-source:auto;}
+br
+  {mso-data-placement:same-cell;}
+.style0
+  {mso-number-format:General;
+  text-align:general;
+  vertical-align:bottom;
+  white-space:nowrap;
+  mso-rotate:0;
+  mso-background-source:auto;
+  mso-pattern:auto;
+  color:black;
+  font-size:10.0pt;
+  font-weight:400;
+  font-style:normal;
+  text-decoration:none;
+  font-family:Arial;
+  mso-generic-font-family:auto;
+  mso-font-charset:0;
+  border:none;
+  mso-protection:locked visible;
+  mso-style-name:Normal;
+  mso-style-id:0;}
+td
+  {mso-style-parent:style0;
+  padding-top:1px;
+  padding-right:1px;
+  padding-left:1px;
+  mso-ignore:padding;
+  color:black;
+  font-size:10.0pt;
+  font-weight:400;
+  font-style:normal;
+  text-decoration:none;
+  font-family:Arial;
+  mso-generic-font-family:auto;
+  mso-font-charset:0;
+  mso-number-format:General;
+  text-align:general;
+  vertical-align:bottom;
+  border:none;
+  mso-background-source:auto;
+  mso-pattern:auto;
+  mso-protection:locked visible;
+  white-space:nowrap;
+  mso-rotate:0;}
+.xl65
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:white;
+  mso-pattern:white none;
+  white-space:normal;}
+.xl66
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  border:.5pt solid gray;}
+.xl67
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:#FFE599;
+  mso-pattern:#FFE599 none;
+  white-space:normal;}
+.xl68
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:#B6D7A8;
+  mso-pattern:#B6D7A8 none;
+  white-space:normal;}
+.xl69
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:#FFF2CC;
+  mso-pattern:#FFF2CC none;
+  white-space:normal;}
+.xl70
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:#D9EAD3;
+  mso-pattern:#D9EAD3 none;
+  white-space:normal;}
+.xl71
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:#9FC5E8;
+  mso-pattern:#9FC5E8 none;
+  white-space:normal;}
+.xl72
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:#EA9999;
+  mso-pattern:#EA9999 none;
+  white-space:normal;}
+.xl73
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:#CFE2F3;
+  mso-pattern:#CFE2F3 none;
+  white-space:normal;}
+.xl74
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:#EAD1DC;
+  mso-pattern:#EAD1DC none;
+  white-space:normal;}
+.xl75
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:#B4A7D6;
+  mso-pattern:#B4A7D6 none;
+  white-space:normal;}
+.xl76
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:#F6B26B;
+  mso-pattern:#F6B26B none;
+  white-space:normal;}
+.xl77
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  vertical-align:middle;
+  border-top:.5pt solid gray;
+  border-right:.5pt solid gray;
+  border-bottom:none;
+  border-left:.5pt solid gray;
+  background:#D9D9D9;
+  mso-pattern:#D9D9D9 none;
+  white-space:normal;}
+.xl78
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  vertical-align:middle;
+  border-top:none;
+  border-right:.5pt solid gray;
+  border-bottom:none;
+  border-left:.5pt solid gray;
+  background:#D9D9D9;
+  mso-pattern:#D9D9D9 none;
+  white-space:normal;}
+.xl79
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  border-top:none;
+  border-right:.5pt solid gray;
+  border-bottom:none;
+  border-left:.5pt solid gray;
+  background:#D9D9D9;
+  mso-pattern:black none;}
+.xl80
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  vertical-align:middle;
+  border-top:none;
+  border-right:.5pt solid gray;
+  border-bottom:.5pt solid gray;
+  border-left:.5pt solid gray;
+  background:#D9D9D9;
+  mso-pattern:#D9D9D9 none;
+  white-space:normal;}
+.xl81
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-weight:700;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  mso-number-format:"Short Time";
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:#F2F2F2;
+  mso-pattern:white none;
+  white-space:normal;}
+.xl82
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:#F2F2F2;
+  mso-pattern:white none;
+  white-space:normal;}
+.xl83
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-weight:700;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:#F2F2F2;
+  mso-pattern:white none;
+  white-space:normal;}
+.xl84
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  border:.5pt solid gray;
+  background:#F2F2F2;
+  mso-pattern:black none;}
+.xl85
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  vertical-align:middle;
+  border-top:.5pt solid gray;
+  border-right:.5pt solid gray;
+  border-bottom:none;
+  border-left:.5pt solid gray;
+  background:#F2F2F2;
+  mso-pattern:#D9D9D9 none;
+  white-space:normal;}
+.xl86
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  vertical-align:middle;
+  border-top:none;
+  border-right:.5pt solid gray;
+  border-bottom:none;
+  border-left:.5pt solid gray;
+  background:#F2F2F2;
+  mso-pattern:#D9D9D9 none;
+  white-space:normal;}
+.xl87
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  border-top:.5pt solid gray;
+  border-right:none;
+  border-bottom:.5pt solid gray;
+  border-left:.5pt solid gray;}
+.xl88
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border-top:.5pt solid gray;
+  border-right:none;
+  border-bottom:.5pt solid gray;
+  border-left:.5pt solid gray;
+  background:white;
+  mso-pattern:white none;
+  white-space:normal;}
+.xl89
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  border-top:.5pt solid gray;
+  border-right:.5pt solid gray;
+  border-bottom:none;
+  border-left:.5pt solid gray;}
+.xl90
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  text-align:center;
+  vertical-align:middle;
+  border-top:none;
+  border-right:none;
+  border-bottom:.5pt solid gray;
+  border-left:.5pt solid gray;
+  background:white;
+  mso-pattern:white none;
+  white-space:normal;}
+.xl91
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  border-top:none;
+  border-right:.5pt solid gray;
+  border-bottom:none;
+  border-left:.5pt solid gray;
+  background:#F2F2F2;
+  mso-pattern:black none;}
+.xl92
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  border-top:none;
+  border-right:.5pt solid gray;
+  border-bottom:none;
+  border-left:none;
+  background:#F2F2F2;
+  mso-pattern:black none;}
+.xl93
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  border-top:none;
+  border-right:.5pt solid gray;
+  border-bottom:.5pt solid gray;
+  border-left:.5pt solid gray;
+  background:#F2F2F2;
+  mso-pattern:black none;}
+.xl94
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-weight:700;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  mso-number-format:"Short Time";
+  text-align:center;
+  vertical-align:middle;
+  border:.5pt solid gray;
+  background:#D9D9D9;
+  mso-pattern:white none;
+  white-space:normal;}
+.xl95
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  vertical-align:middle;
+  border-top:.5pt solid gray;
+  border-right:.5pt solid gray;
+  border-bottom:none;
+  border-left:none;
+  background:#D9D9D9;
+  mso-pattern:#D9D9D9 none;
+  white-space:normal;}
+.xl96
+  {mso-style-parent:style0;
+  color:windowtext;
+  font-family:"Helvetica Neue", sans-serif;
+  mso-font-charset:0;
+  border-top:none;
+  border-right:.5pt solid gray;
+  border-bottom:none;
+  border-left:none;
+  background:#D9D9D9;
+  mso-pattern:black none;}
+-->
