--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -77,7 +77,7 @@ Student Talks (Translational)</a>
 
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse5">
             <div class="timeslot">17:00</div>
-Lighting talks</a>
+Lightning talks</a>
       </h4>
 
     </div>
