--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -145,8 +145,9 @@ Oncology plenary speaker</a>
 
     </div>
     <div id="collapse8" class="panel-collapse collapse">
-      <div class="panel-body"></div>
+      <div class="panel-body">
       Dr. C Glenn Begley
+	  </div>
     </div>
   </div>
   <div class="panel panel-default">
@@ -315,8 +316,9 @@ Ecology plenary speaker</a>
 
     </div>
     <div id="collapse19" class="panel-collapse collapse">
-      <div class="panel-body"></div>
+      <div class="panel-body">
       A/Prof. Tracy Ainsworth
+	  </div>
     </div>
   </div>
   <div class="panel panel-default">
@@ -442,7 +444,7 @@ Awards & Final Remarks</a>
 
     </div>
     <div id="collapse28" class="panel-collapse collapse">
-      <div class="panel-body">EAPS18 concluding withs Awards.</div>
+      <div class="panel-body">EAPS18 concluding with awards.</div>
     </div>
 </div>
 
