--- a/_includes/register.html
+++ b/_includes/register.html
@@ -18,12 +18,8 @@
 
                     <tbody>
                       <tr>
-                        <td><b>Early bird + free dinner</b></td>
-                        <td>$85 (First 25 people by Friday 24<sup>th</sup> August)</td>
-                      </tr>
-                      <tr>
                         <td><b>Early bird</b></td>
-                        <td>$85 (by Friday 24<sup>th</sup> August)</td>
+                        <td>$85 (by Friday 31<sup>st</sup> August)</td>
                       </tr>
                       <tr>
                         <td><b>Regular registration</b></td>
@@ -45,7 +41,7 @@
                         <td>Registration opens</td>
                       </tr>
                         <tr>
-                        <td><b>Friday 24<sup>th</sup> August</b></td>
+                        <td><b>Friday 31<sup>st</sup> August</b></td>
                         <td>Early Bird Registrations & Travel Grant Applications close</td>
                       </tr>
                                               <tr>
