--- a/_includes/register.html
+++ b/_includes/register.html
@@ -45,7 +45,7 @@
                         <td>Early Bird Registrations & Travel Grant Applications close</td>
                       </tr>
                                               <tr>
-                        <td><b>Friday 31<sup>st</sup> August</b></td>
+                        <td><b>Friday 7<sup>th</sup> September</b></td>
                         <td>Abstract submissions close</td>
                       </tr>
                       </tr>
