--- a/_includes/welcome.html
+++ b/_includes/welcome.html
@@ -1,5 +1,4 @@
-<!-- Registration Section -->
-    <section id="register" class="bg-light-gray">
+<section id="register" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -8,10 +7,25 @@
             </div>
             <div class="welcome">
               <div class="col-lg-12 text-justify">
-              The 5th annual European Molecular Biology Laboratory (EMBL) Australia Postgraduate Symposium (EAPS) will be held in late 2018, from November 28<sup>th</sup> - 30<sup>th</sup> at the Translational Research Institute (TRI) in Brisbane.
+              The European Molecular Biology Laboratory (EMBL) Australia Postgraduate Symposium (EAPS) will be held on Wednesday 28<sup>th</sup> - Friday 30<sup>th</sup> November 2018 at the Translational Research Institute (TRI) in Brisbane, Australia. This will be the fifth consecutive year of EAPS, a symposium organised by research students, for research students, across Australia.
               </div>
              <div class="col-lg-12 text-justify"></br>
-              Entitled “Translational Research: Linking Science and Daily Life”, EAPS 2018 will focus on the on the importance of translatability in basic scientific research and the tools and techniques available to turn basic science discoveries into practical solutions in health and the environment. The Symposium will explore a range of fields, from cellular to systems biology, bioinformatics to neurobiology, virology to ecology with a range of distinguished keynote and plenary speakers, as well as oral and poster presentations from students. The symposium is an excellent opportunity for students to learn from world leading researchers, as well as network with a range of other like-minded students and present their work in a friendly and professional environment.
+              Entitled “Translational Research: Linking Science and Daily Life”, EAPS 2018 will focus on the importance of translatability in basic scientific research and the tools and techniques available to turn basic science discoveries into practical solutions in health and the environment. The Symposium will explore a range of fields, from cellular to systems biology, bioinformatics to neurobiology, virology to ecology with a range of distinguished keynote and plenary speakers, as well as oral and poster presentations from students. 
+              </div>
+              <div class="col-lg-12 text-justify"></br>
+              We welcome and encourage all Honours, Masters & PhD Students to attend EAPS 2018; the symposium is an excellent opportunity for students to learn from world leading researchers, as well as network with a range of other like-minded students and present their work in a friendly and professional environment.
+              </div>
+              <div class="col-lg-12 text-align-left"></br>
+                We look forward to seeing you in November! 
+                </br></br>
+                <em>The 2018 EMBL Postgraduate Symposium Organising Committee</em>
+                </br>
+                Email: <a href='mailto:committee.phdsymposium@emblaustralia.org'>committee.phdsymposium@emblaustralia.org</a>
+                </br>
+                Facebook: <a href='https://www.facebook.com/EMBLAphdsymposium'>https://www.facebook.com/EMBLAphdsymposium</a>
+                </br>
+                Twitter: <a href='https://twitter.com/emblausymposium'>https://twitter.com/emblausymposium</a>
+              </div>
               </div>
             </div>
          </div>
