add new sponsors

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -48,6 +48,21 @@
                         <img src="/img/logos/macrogen_oceania.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="https://www.abcam.com/">
+                        <img src="/img/logos/ABCAM.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="http://www.coherent.com.au/">
+                        <img src="/img/logos/Coherent.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="https://www.qimrberghofer.edu.au/">
+                        <img src="/img/logos/QIMR.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
