add csu sponsor

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -63,6 +63,11 @@
                         <img src="/img/logos/QIMR.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="https://www.csu.edu.au/">
+                        <img src="/img/logos/csu.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
