--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -2,71 +2,85 @@
     <section id="sponsors" >
         <div class="container">
             <div class="row">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <h2 class="section-heading">Sponsors</h2>
+                                            <h3 class="section-subheading text-muted">Our sincere thanks to all of our sponsors, without you this event would not be possible.</h3>
 
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Sponsors</h2>
-                                        <h3 class="section-subheading text-muted">Our sincere thanks to all of our sponsors, without you this event would not be possible.</h3>
-
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="https://www.tri.edu.au/translational-research-institute-australia">
-                        <img src="/img/logos/tri.png" class="img-responsive img-centered" alt="">
-                    </a>
+                <div class="row sponsors">
+                    <div class="col-md-3 col-sm-6">
+                        <a href="https://www.tri.edu.au/translational-research-institute-australia">
+                            <img src="/img/logos/tri.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <a href="http://www.emblaustralia.org/">
+                            <img src="/img/logos/embl.jpg" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <a href="https://www.sahmri.org/">
+                            <img src="/img/logos/SAHMRI.jpg" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <a href="https://www.csl.com/">
+                            <img src="/img/logos/CSL.jpg" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="http://www.emblaustralia.org/">
-                        <img src="/img/logos/embl.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                <div class="row sponsors">
+                     <div class="col-md-3 col-sm-6">
+                        <a href="https://www.monash.edu/discovery-institute/">
+                            <img src="/img/logos/monash.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <a href="http://www.scientifix.com.au/">
+                            <img src="/img/logos/scientifix-logo.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <a href="https://www.waters.com/">
+                            <img src="/img/logos/waters.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <a href="http://macrogen.com/en/">
+                            <img src="/img/logos/macrogen_oceania.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="https://www.sahmri.org/">
-                        <img src="/img/logos/SAHMRI.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                <div class="row sponsors">
+                    <div class="col-md-3 col-sm-6">
+                        <a href="https://www.abcam.com/">
+                            <img src="/img/logos/ABCAM.jpg" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <a href="http://www.coherent.com.au/">
+                            <img src="/img/logos/Coherent.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <a href="https://www.qimrberghofer.edu.au/">
+                            <img src="/img/logos/QIMR.jpg" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <a href="https://www.csu.edu.au/">
+                            <img src="/img/logos/csu.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="https://www.csl.com/">
-                        <img src="/img/logos/CSL.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                 <div class="col-md-3 col-sm-6">
-                    <a href="https://www.monash.edu/discovery-institute/">
-                        <img src="/img/logos/monash.png" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="http://www.scientifix.com.au/">
-                        <img src="/img/logos/scientifix-logo.png" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="https://www.waters.com/">
-                        <img src="/img/logos/waters.png" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="http://macrogen.com/en/">
-                        <img src="/img/logos/macrogen_oceania.png" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="https://www.abcam.com/">
-                        <img src="/img/logos/ABCAM.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="http://www.coherent.com.au/">
-                        <img src="/img/logos/Coherent.png" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="https://www.qimrberghofer.edu.au/">
-                        <img src="/img/logos/QIMR.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="https://www.csu.edu.au/">
-                        <img src="/img/logos/csu.png" class="img-responsive img-centered" alt="">
-                    </a>
+                <div class="row">
+                    <div class="col-md-3 col-sm-6">
+                        <a href="https://www.stemcell.com/">
+                            <img src="/img/logos/STEMCELL.jpg" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
