--- a/_includes/css/eaps.css
+++ b/_includes/css/eaps.css
@@ -157,7 +157,7 @@
     -o-background-size: cover;
   background-blend-mode: multiply;
 }
-.comp_text h3, h4{
+.comp_text h4 {
     color: #d3d3d3;
   margin-left: auto;
   margin-right: auto;
