--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -81,6 +81,11 @@
                             <img src="/img/logos/STEMCELL.jpg" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
+                    <div class="col-md-3 col-sm-6">
+                        <a href="https://biotools.com.au/">
+                            <img src="/img/logos/biotools.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
